fix spacing in expertise

--- a/src/components/expertise/Expertise.css
+++ b/src/components/expertise/Expertise.css
@@ -7,7 +7,7 @@
   }
   display:flex;
   padding: 0 5rem;
-  margin-bottom:4rem;
+  margin-bottom:6rem;
 
 }
 .li{
@@ -31,7 +31,7 @@
   background-image: url('../../assets/images/mountain.png');
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position-y: 4.5rem;
+  background-position-y: 8rem;
   @media (min-width: 720px){
    background-position: 0;
   }
